--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-
-# breadcrumbs            : false # true, false (default)
+breadcrumbs              : true 
 words_per_minute         : 200
+
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
@@ -97,14 +97,14 @@ analytics:
 # Site Author
 author:
   name             : "Seung Kim"
-  avatar           : "/Users/m21camby/Desktop/PhD/blog_github/m21camby.github.io/seal.png"
+  avatar           : "/Users/m21camby/Desktop/PhD/blog_github/m21camby.github.io/seal.jpg"
   bio              : "I am a constant amateur person."	
   location         : "Germany"
-  email            :
+  email            : "m21camby@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+      # url: "mailto:m21camby@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -279,6 +279,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
