--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   avatar           : "/images/seal.jpg"
   bio              : "I am a constant amateur person."	
   location         : "Germany"
-  email            : "m21camby@gmail.com"
+  email            : "m21camby@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
