--- a/_config.yml
+++ b/_config.yml
@@ -273,7 +273,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "_posts"
       type: posts
     values:
       layout: single
